Invoice Updated ddd

--- a/Final Invoice.html
+++ b/Final Invoice.html
@@ -152,10 +152,10 @@
                                 <tr>
                                     <th class="text-center" width="50">#</th>
                                     <th class="text-left">Product</th>
-                                    <th class="text-right" width="100">CPU ($)</th>
                                     <th class="text-right" width="100">Qty</th>
+                                    <th class="text-right" width="100">CPU ($)</th>
                                     <th class="text-right" width="100">Discount ($)</th>
-                                    <th class="text-right" width="100">Amount ($)</th>
+                                    <th class="text-right" width="100">Total ($)</th>
                                 </tr>
                             </thead>
 
@@ -163,24 +163,24 @@
                                 <tr>
                                     <td class="text-center">1</td>
                                     <td class="text-left">Product 1</td>
-                                    <td class="text-right">$10</td>
                                     <td class="text-right">1Pc</td>
+                                    <td class="text-right">$10</td>
                                     <td class="text-right">$0</td>
                                     <td class="text-right">$10</td>
                                 </tr>
                                 <tr>
                                     <td class="text-center">2</td>
                                     <td class="text-left">Product 2</td>
-                                    <td class="text-right">$15</td>
                                     <td class="text-right">2Pc</td>
+                                    <td class="text-right">$15</td>
                                     <td class="text-right">$5</td>
                                     <td class="text-right">$25</td>
                                 </tr>
                                 <tr>
                                     <td class="text-center">3</td>
                                     <td class="text-left">Product 3</td>
-                                    <td class="text-right">$20</td>
                                     <td class="text-right">1Pc</td>
+                                    <td class="text-right">$20</td>
                                     <td class="text-right">$2</td>
                                     <td class="text-right">$18</td>
                                 </tr>
@@ -204,16 +204,12 @@
                                     <td class="text-right">$20</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-right" colspan="5"><strong>Total</strong></td>
+                                    <td class="text-right" colspan="5"><strong>Grand Total</strong></td>
                                     <td class="text-right"><strong>$340</strong></td>
                                 </tr>
                                 <tr>
-                                    <td class="text-right" colspan="5">Paid</td>
+                                    <td class="text-right" colspan="5">Paid by(Cash)</td>
                                     <td class="text-right">$20</td>
-                                </tr>
-                                <tr>
-                                    <td class="text-right" colspan="5">Payment Method</td>
-                                    <td class="text-right">Cash</td>
                                 </tr>
                                 <tr>
                                     <td class="text-right" colspan="5">Due</td>
